Fixed alignment for buttons styled as list items in dropdown menus

--- a/resources/assets/sass/extra.scss
+++ b/resources/assets/sass/extra.scss
@@ -115,3 +115,9 @@ body { padding-bottom: 80px; }
 .hidden-from-vue {
   display: none;
 }
+
+/* dropdown menus */
+.dropdown-menu .btn-link{
+  padding-left: 20px;
+
+}
